# Recall

./: .env.example  .gitignore  API.md  ARCHITECTURE.md  README.md  STATE_SCHEMA.md  pyproject.toml
recall/: config.yaml  main.py
recall-ui/: README.md  index.html  package-lock.json  package.json
recall-ui/src/ui/: App.tsx  api.ts  styles.css  types.ts
recall/agent/: __init__.py  dedupe.py  engine.py  judge.py  parser.py  pending_parse.py  questions.py  ranker.py  review.py  scorecard.py  service.py  state.py
recall/agent/middleware/: limits.py
recall/api/: app.py  tasks.py  ui_state.py
recall/config/: config.py
recall/db/: postgres.py
recall/llm/: factory.py
recall/memory/: long_term.py  session.py  short_term.py
recall/observability/: logger.py
